# bazel

./: .bazelrc  BUILD.bazel  MODULE.bazel  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
